# Qt-TextEdit-high-font-size-Issue

./: CMakeLists.txt  Main.qml  main.cpp
